--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name": "epiphany-shims-pmb",
-  "version": "0.1.0",
-  "description": "Selected ES5+ shims for the epiphany browser.",
+  "version": "0.1.1",
+  "description": "This package has been superseded by msie6-shims-pmb.",
   "keywords": [ "epiphany", "browser", "shim" ],
 
   "author": "M.K. (https://github.com/mk-pmb)",
